--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace.package]
-version = "0.19.6-beta.5"
+version = "0.1.0"
 edition = "2021"
-description = "A link aggregator for the fediverse"
+description = "A link aggregator for the fediverse, cyberbus.net version."
 license = "AGPL-3.0"
-homepage = "https://join-lemmy.org/"
-documentation = "https://join-lemmy.org/docs/en/index.html"
-repository = "https://github.com/LemmyNet/lemmy"
+homepage = "https://github.com/cyberbus-net"
+documentation = "https://github.com/cyberbus-net"
+repository = "https://github.com/cyberbus-net/cyberbus-backend"
 
 [package]
 name = "lemmy_server"
@@ -89,17 +89,17 @@ unwrap_used = "deny"
 unimplemented = "deny"
 
 [workspace.dependencies]
-lemmy_api = { version = "=0.19.6-beta.5", path = "./crates/api" }
-lemmy_api_crud = { version = "=0.19.6-beta.5", path = "./crates/api_crud" }
-lemmy_apub = { version = "=0.19.6-beta.5", path = "./crates/apub" }
-lemmy_utils = { version = "=0.19.6-beta.5", path = "./crates/utils", default-features = false }
-lemmy_db_schema = { version = "=0.19.6-beta.5", path = "./crates/db_schema" }
-lemmy_api_common = { version = "=0.19.6-beta.5", path = "./crates/api_common" }
-lemmy_routes = { version = "=0.19.6-beta.5", path = "./crates/routes" }
-lemmy_db_views = { version = "=0.19.6-beta.5", path = "./crates/db_views" }
-lemmy_db_views_actor = { version = "=0.19.6-beta.5", path = "./crates/db_views_actor" }
-lemmy_db_views_moderator = { version = "=0.19.6-beta.5", path = "./crates/db_views_moderator" }
-lemmy_federate = { version = "=0.19.6-beta.5", path = "./crates/federate" }
+lemmy_api = { version = "=0.1.0", path = "./crates/api" }
+lemmy_api_crud = { version = "=0.1.0", path = "./crates/api_crud" }
+lemmy_apub = { version = "=0.1.0", path = "./crates/apub" }
+lemmy_utils = { version = "=0.1.0", path = "./crates/utils", default-features = false }
+lemmy_db_schema = { version = "=0.1.0", path = "./crates/db_schema" }
+lemmy_api_common = { version = "=0.1.0", path = "./crates/api_common" }
+lemmy_routes = { version = "=0.1.0", path = "./crates/routes" }
+lemmy_db_views = { version = "=0.1.0", path = "./crates/db_views" }
+lemmy_db_views_actor = { version = "=0.1.0", path = "./crates/db_views_actor" }
+lemmy_db_views_moderator = { version = "=0.1.0", path = "./crates/db_views_moderator" }
+lemmy_federate = { version = "=0.1.0", path = "./crates/federate" }
 activitypub_federation = { version = "0.5.8", default-features = false, features = [
   "actix-web",
 ] }
