--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ target
 env_setup.sh
 query_testing/**/reports/*.json
 
+# local config
+config/config.hjson
+
+
 # API tests
 api_tests/node_modules
 api_tests/.yalc
