--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -8,7 +8,9 @@ jobs:
       name: push docker image to docker hub
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v4          
+        - uses: actions/checkout@v4
+          with:
+            submodules: 'true'          
         - name: login to docker hub
           id: docker-hub
           env:
